# swahili-health-mcp

./: CONTRIBUTING.md  README.md  glama.json  pyproject.toml  server.json
.github/workflows/: ci.yml
swahili_health_mcp/: __init__.py  server.py
tests/: test_smoke.py
