[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swahili-health-mcp"
version = "0.1.1"
description = "MCP server for Kenya health data — facilities, maternal health, immunization"
readme = "README.md"
license = "MIT"
keywords = ["kenya", "health", "mcp", "swahili", "dhis2", "east-africa"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
swahili-health-mcp = "swahili_health_mcp.server:run_server"

[project.urls]
Homepage = "https://github.com/gabrielmahia/swahili-health-mcp"
Repository = "https://github.com/gabrielmahia/swahili-health-mcp"
